Fix some fontawesome icons
Part of request #12138: Remove FontAwesome 3.2.1 usage

- Go to a flaming parrot page. The cog icon in the navbar (link to preferences)
  is not too small.
- Given Epic » Story » Task, go to the Epic. In artifact link field, you should
  see a caret next to the Story.

--- a/src/www/themes/FlamingParrot/css/utils/_navbar.scss
+++ b/src/www/themes/FlamingParrot/css/utils/_navbar.scss
@@ -195,6 +195,7 @@
         .fa-cog {
             position: relative;
             top: 1.5px;
+            font-size: 16px;
         }
 
         @media screen and (max-width: 1250px) {
